Commented code, removed always-random

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <link rel="stylesheet" type="text/css" href="./main.css" />
   </head>
   <body>
-      <button id="clear-grid">Create a New Grid</button>
-      <button id="color-pick">Choose a Colour</button>
-      <button id="random-color">Random Colour</button>
-      <input type="checkbox" name="always-random-color" id="always-random-color" unchecked>Always Random Color<br>
+      <div id="input-holder">
+      <button id="clear-grid" class="button-size">Create a New Grid</button>
+      <button id="color-pick" class="button-size">Choose a Colour</button>
+      <button id="random-color" class="button-size">Random Colour</button>
+      <!-- <input type="checkbox" name="always-random-color" id="always-random-color" class="size">Always Random Color<br> --> 
       <br>
       <br>
       <br>
+    </div>
     <div id="divContainer"></div>
   </body>
   <script type="text/javascript" src="./logic.js"></script>
