Re-added problematic allRandom function

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <button id="clear-grid" class="button-size">Create a New Grid</button>
       <button id="color-pick" class="button-size">Choose a Colour</button>
       <button id="random-color" class="button-size">Random Colour</button>
-      <!-- <input type="checkbox" name="always-random-color" id="always-random-color" class="size">Always Random Color<br> --> 
+      <input type="checkbox" name="always-random-color" id="always-random-color" class="size">Always Random Color<br>
       <br>
       <br>
       <br>
